--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "graphql": "^15.5.1",
     "jsonwebtoken": "^9.0.0",
+    "dotenv": "^16.0.3",
     "mongoose": "^7.0.4"
   },
   "devDependencies": {
